# projects

./: pyproject.toml
European Options/: Figure 19.ipynb  Figure15.ipynb  Page 12.ipynb  bloch-sphere.ipynb  editor.py  european_call.ipynb  first.ipynb  first.py  main.py  qsphere2.ipynb
European Options/statevector examples/: Figure 15 qsphere.ipynb  numpy_matrix.ipynb  qsphere.ipynb  qsphere3.ipynb  statevector2.ipynb
