[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["PaweMaszota <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^21.0.1"
jupyter = "^1.0.0"
editor = "^1.2.1"
notebook = "^6.3.0"
qiskit = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
